--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,18 @@
 /.project
 /application/includes/img/Thumbs.db
 *.bak
+/application/controllers/resources/fonts/AntykwaBold.ttf
+/application/controllers/resources/fonts/Candice.ttf
+/application/controllers/resources/fonts/Ding-DongDaddyO.ttf
+/application/controllers/resources/fonts/Duality.ttf
+/application/controllers/resources/fonts/Heineken.ttf
+/application/controllers/resources/fonts/Jura.ttf
+/application/controllers/resources/fonts/StayPuft.ttf
+/application/controllers/resources/fonts/TimesNewRomanBold.ttf
+/application/controllers/resources/fonts/VeraSansBold.ttf
+/application/controllers/resources/tools/dictionary-import/README.txt
+/application/controllers/resources/tools/dictionary-import/importwords.php
+/application/controllers/resources/tools/dictionary-import/sample-words-en.txt
+/application/controllers/resources/tools/dictionary-import/sample-words-es.txt
+/application/controllers/resources/words/en.php
+/application/controllers/resources/words/es.php
